Transfer Value in tamplate Isolate namespace

--- a/Page05.html
+++ b/Page05.html
@@ -6,6 +6,7 @@
     <script src="js_Isolate.js"></script>
     <script src="js_IsolateModule01.js"></script>
     <script src="js_IsolateModule02.js"></script>
+    <script src="js_IsolateTest.js"></script>
 </head>
 <body>
     <script>
@@ -13,7 +14,7 @@
 
     </script>
     <div id="test" name="test"></div>
-
+    &nbsp;
     <script>
         // создание пространства имен, которое использует все модули ajax, events и dom
         App("module01",function (box) {
@@ -21,9 +22,9 @@
             //document.write(" box.getElement(\"div1\")" + e + "<br/>");
             //box.addListener(e, "click");
 
-            
+          
 
-            box.method11("=d");
+            box.method11("=ddedd");
             //alert(box.constructor.prototype.m);
             box.method12("-78-");
         });
